--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -19,7 +19,7 @@ jobs:
           committer_token: ${{ secrets.GITHUB_TOKEN }}
 
           # Options
-          user: blakcjack
+          user: berlins07
           template: classic
           base: header, activity, community, repositories, metadata
           config_animations: yes
